fixed excessive stretching on portrait mode screens

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ header {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: white;
     color: #004225;
-    padding: 2vh 3vw;
+    padding: 1% 3vw;
     display: flex;
     align-items: center;
 }
@@ -80,7 +80,7 @@ ul a:hover,.selected {
 .nav-button {
     background-color: #6ea3e0; /* Button color */
     color: white; /* Text color */
-    padding: 1.5vh 3vw; /* Button padding */
+    padding: 10% 3vw; /* Button padding */
     text-decoration: none; /* Removes underline */
     border-radius: 5px; /* Rounded corners */
     transition: background-color 0.3s; /* Smooth background color transition on hover */
@@ -91,7 +91,7 @@ ul a:hover,.selected {
 .nav-button:hover {
     background-color: #512C1D; /* Darker shade on hover */
     color: white; /* Text color */
-    padding-bottom: 1.5vh; /* Remove changes made for hovering over normal links in nav */
+    padding: 10% 3vw; /* Remove changes made for hovering over normal links in nav */
     border-bottom: none;
 }
 
